kubernetes/apps/default/pg/pgadmin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: pgadmin.${SECRET_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "pgadmin.${SECRET_DOMAIN}"
      secretName: "pgadmin-tls"
  rules:
    - host: "pgadmin.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-pgadmin4
                port:
                  number: 80
